# code_learn

./: README.md  shmdata_compress
base/: temp.cc
base/c_language/: build.sh  main  main.cc
base/callback/: build.sh  callback  callback.cc  functional  functional.cc
base/class_learn/: build.sh  class_demo  class_demo.cc  class_test  class_test.cc  class_test1  class_test1.cc
base/demo/: demo  demo.cc  demo.i  demo.s  demo.sh
base/linked_list/: build.sh  list.cc  list.h  test_list  test_list.cc
base/point/: build.sh  point_demo  point_demo.cc
base/shared_ptr/: build.sh  demo  main
base/smart_point/: build.sh  shared_ptr.cc  unique_ptr.cc
base/sort/: CMakeLists.txt  build.sh  test_sort.cc
base/sort/quick_sort/: CMakeLists.txt  quick_sort.cc  quick_sort.h
base/sort/sort/: CMakeLists.txt  README.md  heap_sort.cc  heap_sort.h  merge_sort.cc  merge_sort.h  quick_sort.cc  quick_sort.h
base/stl/: README.md  map.cc  queue  queue.cc  string.cc
base/stl/algorithm/: build.sh  sort  sort.cc  temp.cc
base/stl/container/: README.md  build.sh  stack  stack.cc  string
base/template/: template_demo  template_demo.cc
base/test/: build.sh  test  test.cc
base/thread/: build.sh  condition_variable  condition_variable.cc  thread_demo  thread_demo.cc
base/topic/: build.sh  kmp.cc
design_pattern/abstract_factory_pattern/: CMakeLists.txt  README.md  build.sh  demo.cc  factory.cc  factory.h  product.cc  product.h
design_pattern/builder_pattern/: CMakeLists.txt  build.sh  builder.cc  builder.h  computer.cc  computer.h  director.cc  director.h  main.cc
design_pattern/decorator_pattern/: CMakeLists.txt  README.md  decorator.cc
design_pattern/demo/: demo.cc
design_pattern/factory_method_pattern/: CMakeLists.txt  README.md  demo.cc  demo.h
design_pattern/observer_pattern/: CMakeLists.txt  README.md  demo.cc  demo.h  main.cc  observer.cc  observer.h
design_pattern/proxy_pattern/: CMakeLists.txt  README.md  build.sh  proxy.cc  proxy.h
design_pattern/simple_factory_pattern/: README.md  demo.cc  demo.h
design_pattern/singleton_pattern/: CMakeLists.txt  build.sh  singleton.cc  singleton_easy.cc  singleton_safe.cc
leetcode/: build.sh  least_up_vector.cc  list_reverse  list_reverse.cc  lru  lru.cc
leetcode/binary_tree/: level_traverse.cc  tree_hight.cc
python/audio_delay/: cal_delay.py  test.py
python/audio_delay/file/: command1.csv  wake1.csv
shell/: file_trave.sh  tinycap.sh
shell/audio_delay/: audio.csv  audio.txt  audio1.csv  cal_delay.sh  test.sh  wake.sh  wake_label.txt
shell/audio_delay/file/: co_command1.csv  co_wake1.csv  command1.csv
socket/: build.sh  client  client.cc  server  server.cc
